# target-cfg-bin-example

./: Cargo.toml  README.md
src/: main.rs  main_android.rs
